--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,13 @@ body {
     line-height: 18px;
     overflow-x: hidden;
 }
+input {
+    outline: none;
+    padding-left: 10px;
+}
+.contact-input input[type=text] {
+    padding-left: 40px;
+}
 
 
 header {
@@ -118,7 +125,7 @@ header {
     animation-iteration-count: infinite;
 }
  
-@-webkit-keyframes slideme {
+@keyframes slideme {
     0% { left: -30px; margin-left: 0px; }
     30% { left: 110%; margin-left: 80px; }
     100% { left: 110%; margin-left: 80px; } 
@@ -423,6 +430,13 @@ body {
     display: flex;
     align-items: flex-end;
 }
+
+.error {
+    box-shadow: 0 0 8px rgb(255 0 0);
+}
+
+
+
 .calc-div {
     display: flex;
     flex-direction: column;
@@ -811,6 +825,11 @@ body {
 }
 .obman2 {
     display: none;
+}
+
+.volleySpan::after , .timeSpan::after , .calliberSpan::after {
+    transform: scale(1.1);
+    transition: 0.2s;
 }
 
 
